--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <a href="portal.html">Go to Student portal</a>
+    <a href="param.html">Check out parameterized function</a>
     <script src="script.js"></script>
 </body>
 </html>
